gvb_interp/src/snapshots/gvb_interp__vm__tests__file__put_mode_error.snap
---
source: gvb_interp/src/vm.rs
expression: "run_with_file(r#\"\n10 open \"f\" output as 2\n20 put 2, 1\n    \"#.trim(),\n              vec![(exec_error(1, 3, 11,\n                               \"PUT 语句只能用于以 RANDOM 模式打开的文件，\\\n              但 2 号文件是以 OUTPUT 模式打开的\"),\n                    None)], b\"f.DAT\", File::new(b\"ABCDEFGHIJKL\".to_vec()))"

---
open file "f.DAT", read: false, write: true, truncate: true
close file

