gvb_interp/src/snapshots/gvb_interp__vm__tests__file__reopen_file.snap
---
source: gvb_interp/src/vm.rs
expression: device.log.borrow()

---
open file "f.DAT", read: false, write: true, truncate: true
close file

